--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body{
-  background-image: linear-gradient( rgba(0,0,0,0.2) , rgba(0,0,0,0.6)) ;
-  background-size: 100%;
-  background-repeat: repeat;
   width: 100vw;
-  height: 100vh;
-  background-position: center;
-  
-   /* background-color: ; */
+  height: 100vh;  
+   background-color: #f5f5f5; ;
 }
